<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:text="@string/cadastro"
            android:layout_margin="5dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/nome_completo"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <CheckBox
            android:id="@+id/emailCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receber_emails"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailET" />

        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/telefone"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp" >

            <RadioButton
                android:id="@+id/comercialRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/comercial"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/residencialRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/residencial"
                android:layout_weight="1" />

        </RadioGroup>

        <CheckBox
            android:id="@+id/celularCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailET" />

        <EditText
            android:id="@+id/celularEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:visibility="gone"
            android:hint="@string/telefone_celular"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="18sp"
                android:layout_marginEnd="15dp"/>

            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feminino"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:layout_weight="1" />
        </RadioGroup>

        <EditText
            android:id="@+id/dataNascimentoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/data_nascimento"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:text="@string/formacao"
            android:layout_margin="5dp"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/ensino_fundamental"
            android:layout_margin="5dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/fundamentalEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/conclusao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/ensino_m_dio"
            android:layout_margin="5dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/medioEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/conclusao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/gradua_o"
            android:layout_margin="5dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/conclusaoGraduacaoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/conclusao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/instituicaoGraduacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/instituicao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/especializa_o"
            android:layout_margin="5dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/conclusaoEspecializacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/conclusao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/instituicaoEspecializacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/instituicao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/mestrado"
            android:layout_margin="5dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/conclusaoMestrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/conclusao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/instituicaoMestrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/instituicao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/tituloMonografiaMestradoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/titulo_de_monografia"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/orientadorMestradoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/orientador"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/doutorado"
            android:layout_margin="5dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/conclusaoDoutorado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/conclusao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/instituicaoDoutorado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/instituicao"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/tituloMonografiaDoutoradoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/titulo_de_monografia"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/orientadorDoutoradoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/orientador"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/vagasInteresseEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/vagas_de_interesse"
            android:minHeight="48dp"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:padding="5dp"
            android:layout_margin="5dp" />

    </LinearLayout>

</ScrollView>